# ToDoListApp

./: .gitignore  README.md  pyproject.toml  requirements.txt  todo.py
docs/: README.md  env_example.txt
src/: auth.py  config.py  env.py  main.py  storage.py  todo.py
