[project]
name = "todolistapp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "TP1: Todo List", email = "a79433@ualg.pt }
]
dependencies = [
  "flet==0.27.1"
]

[tool.flet]

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.1",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.1"}